一、常规升级修复 1、修复开机脚本在magisk-delta中无法生效的问题。

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,6 +55,7 @@
 
     <!-- path of boot shell-->
     <string name="magisk_boot_general">/data/adb/service.d</string>
+    <string name="magisk_delta_boot">/data/adb/post-fs-data.d</string>
     <string name="shell">#!/system/bin/sh</string>
 
     <!--navigation -->
